Changed grpc message name; added k8s service

--- a/k8s/k8s.yaml
+++ b/k8s/k8s.yaml
@@ -18,3 +18,15 @@ spec:
       - name: sitemgr
         image: sitemgr:{{ .Commit }}
         imagePullPolicy: IfNotPresent
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: sitemgr
+spec:
+  selector:
+    app: sitemgr
+  ports:
+  - protocol: TCP
+    port: 2018
+    targetPort: 8688
