--- a/wercker.yml
+++ b/wercker.yml
@@ -38,6 +38,7 @@ push-image:
         registry: $GCR_HOST/v2
         username: _json_key
         password: $GCP_KEY_JSON
+    - internal/store-container
 
 deploy-to-kubernetes:
   steps:
