--- a/wercker.yml
+++ b/wercker.yml
@@ -31,7 +31,7 @@ push-image:
         mv k8s-deploy.yaml.template $WERCKER_OUTPUT_DIR
     - internal/docker-push:
         working-dir: $WERCKER_ROOT
-        env: RABBITMQ_SERVER=${RABBITMQ_SERVER} RABBITMQ_USER=${RABBITMQ_USER} RABBITMQ_PASS=${RABBITMQ_PASS}
+        env: RABBITMQ_SERVER=${RABBITMQ_SERVER} RABBITMQ_USER=${RABBITMQ_USER} RABBITMQ_PASS=${RABBITMQ_PASS} POSTGRESQL_ARGS=${POSTGRESQL_ARGS}
         cmd: ./sitemgr
         tag: $WERCKER_GIT_COMMIT
         repository: $GCR_TAG
